[gd_scene load_steps=7 format=3 uid="uid://bbxvrgxqf1sl8"]

[ext_resource type="Script" path="res://Player/Attack/spinning_disc.gd" id="1_87nhu"]
[ext_resource type="Texture2D" uid="uid://dxn35rgn3vloq" path="res://Textures/Items/Weapons/spin_disc_v1.png" id="2_41co8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6wdq"]

[sub_resource type="Animation" id="Animation_wx6a3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ggbwp"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mah6w"]
_data = {
"RESET": SubResource("Animation_wx6a3"),
"spin": SubResource("Animation_ggbwp")
}

[node name="spinning_disc" type="Area2D" groups=["attack"]]
texture_filter = 3
position = Vector2(338, 196)
scale = Vector2(0.1, 0.1)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_87nhu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_41co8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a6wdq")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[node name="CoolDownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_mah6w")
}

[node name="RemoveFromArrayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
[connection signal="timeout" from="RemoveFromArrayTimer" to="." method="_on_remove_from_array_timer_timeout"]
